--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
                     <div class="col-8 mt-3 pt-3">
                         <h1>Hi, I'm <i>Caleb</i></h1>
                         <p>
-                            Ever since a was a child I captivated by two things, technology, and creativity. That passion birthed
-                            when I was young has only grown until today. I'm a <em>Software Developer</em>, <em>Designer</em>, and <em>General Creative</em>
-                            eternaly motivated to create and explore interesting projects in all areas of technology. Take a look around to see
-                            a colleciton of my projects ranging everything from full stack security training applications to video game projects.
+                            Ever since I was a child I have been captivated by two things, technology, and creativity. That passion birthed
+                            when I was young has only grown since then. I'm a <em>Software Developer</em>, <em>Designer</em>, and <em>General Creative</em>
+                            eternaly motivated to create and explore interesting projects in all areas of technology. Please take a look around to see
+                            a collection of my projects ranging everything from full stack security training applications to video game projects. If you have any questions
+                            don't hesitate to reach out. I look forward to hearing from you.
                         </p>
                         <p>
                             <button type="button" class="btn btn-outline-black float-end me-4" data-mdb-ripple-color="dark" onclick="window.location.href='./Pages/contact.html'">Contact Me</button>
