--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -95,7 +95,8 @@
                                     <em>C#, FlowFields, Pathfinding, Unity 3D, Graphs, Realtime Simulation</em>
                                 </h6>
                                 <p>
-                                    A 3D simulation of large group pathfinding using a Flow Fields algorithm calculated by solving the Eikonal Equation. My final project for my Animation and Planning in Games class, implemented based on the paper Continuum Crowds by Adrien Treuille, Seth Cooper, and Zoran Popovic.
+                                    A 3D simulation of large group pathfinding using a Flow Fields algorithm calculated by solving the Eikonal Equation. 
+                                    My final project for my Animation and Planning in Games class, that was implemented based on the paper Continuum Crowds by Adrien Treuille, Seth Cooper, and Zoran Popovic.
                                 </p>
                                 <a href="./Projects/FlowFieldPathfinding.html">
 
@@ -132,7 +133,8 @@
                                     <em>C#, Mass-Spring Cloth Sim, Shallow Water, Unity 3D, Realtime Simulation</em>
                                 </h6>
                                 <p>
-                                    A realtime 3D Cloth Simulation using a Mass-Spring method and a 2D Shallow Water simulation. Both written in C# and implemented in Unity. Writen as a project for my Animationa and Planning in Games Class.
+                                    A real-time 3D Cloth Simulation using a Mass-Spring method and a 2D Shallow Water simulation. 
+                                    Both written in C# and implemented in Unity. Written as a project for my Animation and Planning in Games Class.
                                 </p>
                                 <a href="./Projects/ClothAndShallowWater.html">
                                     <button class="btn btn-sm btn-secondary float-end">
@@ -222,7 +224,8 @@
                                             <div class="ps-2 pt-1">
                                                 <h6><em>C#, FlowFields, Pathfinding, Unity 3D, Graphs, Realtime Simulation</em></h6>
                                                 <p class="card-text">
-                                                    A 3D simulation of large group pathfinding using a Flow Fields algorithm calculated by solving the Eikonal Equation. My final project for my Animation and Planning in Games class, implemented based on the paper Continuum Crowds by Adrien Treuille, Seth Cooper, and Zoran Popovic.
+                                                    A 3D simulation of large group pathfinding using a Flow Fields algorithm calculated by solving the Eikonal Equation. 
+                                                    My final project for my Animation and Planning in Games class, that was implemented based on the paper Continuum Crowds by Adrien Treuille, Seth Cooper, and Zoran Popovic.
                                                 </p>
                                                 <a href="./Projects/FlowFieldPathfinding.html">
                                                     <button class="btn btn-sm btn-secondary float-end">
@@ -257,7 +260,8 @@
                                             <div class="ps-2 pt-1">
                                                 <h6><em>C#, Mass-Spring Cloth Sim, Shallow Water, Unity 3D, Realtime Simulation</em></h6>
                                                 <p class="card-text">
-                                                    A realtime 3D Cloth Simulation using a Mass-Spring method and a 2D Shallow Water simulation. Both written in C# and implemented in Unity. Writen as a project for my Animationa and Planning in Games Class.
+                                                    A real-time 3D Cloth Simulation using a Mass-Spring method and a 2D Shallow Water simulation. 
+                                                    Both written in C# and implemented in Unity. Writen as a project for my Animation and Planning in Games Class.
                                                 </p>
                                                 <a href="./Projects/ClothAndShallowWater.html">
                                                     <button class="btn btn-sm btn-secondary float-end">
@@ -285,13 +289,14 @@
                                     <div class="row g-0 my-auto">
                                         <div class="card-body">
                                             <h5 class="card-title snippet">
-                                                2D Inverse Kinimatics and BOIDS with Obstacle Avoidance
+                                                2D Inverse Kinematics and BOIDS with Obstacle Avoidance
                                             </h5>
 
                                             <div class="ps-2 pt-1">
                                                 <h6><em>C#, Inverse Kinimatics, BOIDS, Unity 3D, Realtime Simulation</em></h6>
                                                 <p class="card-text">
-                                                    A 2D Inverse Kinimatics simulation implmeneted using Cyclic Coordonate Descent(CCD) and a BOIDS implementation with an additional obstacle avoidance force to cause flocks to move around obstacles.
+                                                    A 2D Inverse Kinematics simulation implemented using Cyclic Coordinate Descent(CCD) and a BOIDS implementation with
+                                                    an additional obstacle avoidance force to cause flocks to move around obstacles.
                                                 </p>
                                                 <a href="./Projects/2DCDDIKAndBOIDS.html">
                                                     <button class="btn btn-sm btn-secondary float-end">
@@ -325,7 +330,8 @@
                                             <div class="ps-2 pt-1">
                                                 <h6><em>PHP, MySQL, HTML, CSS, Javascript, MDBootstrap</em></h6>
                                                 <p class="card-text">
-                                                    FishyPhisher is a software that automates phishing campaigns for use in security education training and awareness programs. FishyPhiser can be used to plan, execute, and track phishing email campaigns, prdiving reports about company security.
+                                                    FishyPhisher is a software that automates phishing campaigns for use in security education training and awareness programs. 
+                                                    FishyPhiser can be used to plan, execute, and track phishing email campaigns, providing reports about company security.
                                                 </p>
                                                 <a href="./Projects/FishyPhisherStandalone.html">
                                                     <button class="btn btn-sm btn-secondary float-end">
@@ -359,7 +365,8 @@
                                             <div class="ps-2 pt-1">
                                                 <h6><em>Python Game, Cocos2Dpy, Procedural Map Generation</em></h6>
                                                 <p class="card-text">
-                                                    A 2D dungeon crawling hack and slash with where you fight your way through procedurally generated dungeons of greater and greater difficulty. Written in Python using the Cocos2Dpy library.
+                                                    A 2D dungeon crawling hack and slash with where you fight your way through procedurally generated dungeons of greater and greater difficulty. 
+                                                    Written in Python using the Cocos2Dpy library.
                                                 </p>
                                                 <a href="./Projects/TheDunegonsBelowGame.html">
                                                     <button class="btn btn-sm btn-secondary float-end">
@@ -394,7 +401,8 @@
                                             <div class="ps-2 pt-1">
                                                 <h6><em>Node JS, Express, MYSQL, SocketIO, Javascript, Less, EJS, IO Game</em></h6>
                                                 <p class="card-text">
-                                                    A Apples to Apples like IO party game. Similar to Jackbox Party games, designed to be played with a group of people who see the current state of play on a large display and join the game and make their selections with their phones.
+                                                    An Apples to Apples like IO party game. Similar to Jackbox Party games, designed to be played with a 
+                                                    group of people who see the current state of play on a large display while also joining the game and making their selections with their phones.
                                                     Written with Node JS, Express, SocketIO, and more.
                                                 </p>
                                                 <a href="./Projects/ApplesToOranges.html">
