--- a/Pages/about.html
+++ b/Pages/about.html
@@ -85,13 +85,20 @@
                     </div>
                     <div class="col-lg-8 col-xl-6 my-auto">
                         <p>
-                            Hello, and welcome to my portfolio. My name is Caleb and I'm a <em>Software Developer</em>, <em>Designer</em>, and <em>General Creative</em> with a B.S. in Computer Science and an A.A.S in Computer Programming, recently graduated from the University of Minnesota Twin Cities.
+                            Hello, and welcome to my portfolio. My name is Caleb and I'm a <em>Software Developer</em>, 
+                            <em>Designer</em>, and <em>General Creative</em> with a B.S. in Computer Science and an A.A.S in 
+                            Computer Programming, recently graduated from the University of Minnesota Twin Cities.
                         </p>
                         <p>
-                            Ever since I was a child I captivated by two things, technology, and creativity. That passion has only grown since and has driven me to explore many interests and fields surrounding and involving both those passions including, full-stack development, video game development and design, real-time simulation creation, video editing and production, live sound engineering, live stream broadcast production, and creative writing.  
+                            Ever since I was a child I have been captivated by two things, technology, and creativity. That passion has 
+                            only grown since and has driven me to explore many interests and fields surrounding and involving 
+                            both those passions including, full-stack development, video game development and design, real-time 
+                            simulation creation, video editing and production, live sound engineering, live stream broadcast production, and creative writing.  
                         </p>
                         <p>
-                            In my portfolio, you will find a collection of my previous work and side projects. These projects range everything from full-stack security training applications to video games, pathfinding, and cloth simulation projects. I am always excited for new ideas and opportunities. If you want to contact me please click the button below. I look forward to speaking with you!
+                            In my portfolio, you will find a collection of my previous work and side projects. These projects range everything 
+                            from full-stack security training applications to video games, pathfinding, and cloth simulation projects. I am always 
+                            excited by new ideas and opportunities. If you want to contact me please click the button below. I look forward to speaking with you!
                         </p>
 
                     </div>
