--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -77,7 +77,7 @@
                             </h1>
                             <hr>
                             <p class="ms-4">
-                                Want to inquire about my work? Want to talk about an oportunity or project? Fill out the contact form to get in touch.
+                                Want to inquire about my work? Want to talk about an opportunity or project? Fill out the contact form to get in touch.
                             </p>
                         </div>
 
