--- a/Pages/Projects/2DCDDIKAndBOIDS.html
+++ b/Pages/Projects/2DCDDIKAndBOIDS.html
@@ -81,7 +81,10 @@
                 </div>
                 <div class="col-sm-6">
                     <p>
-                        This project contains two simulations, the first is a 2D Inverse Kinematics simulation that was implemented using a Cyclic Coordinate Descent(CCD) method on a multi-arm armature reaching for two different target points. In addition to the base IK system, I implemented configurable angle limits for the armature's joints and collision with external objects. The second simulation uses the BOIDs flocking algorithm with an additional goal and collision avoidance force to direct the movement of groups of AI agents.
+                        This project contains two simulations, the first is a 2D Inverse Kinematics simulation that was implemented 
+                        using a Cyclic Coordinate Descent(CCD) method on a multi-arm armature reaching for two different target points. 
+                        In addition to the base IK system, I implemented configurable angle limits for the armature's joints and collision with external objects. 
+                        The second simulation uses the BOIDs flocking algorithm with an additional goal and collision avoidance force to direct the movement of groups of AI agents.
                     </p>
                 </div>
 
@@ -110,7 +113,7 @@
                                     </video>    
                                     <div class="carousel-caption d-none d-md-block">
                                     <h5>2D CCD Inverse Kinematics</h5>
-                                    <p>A multi limb armature reaching for two seperate goals with angle limts on certain joints, control by CCD IK.</p>
+                                    <p>A multi-limb armature reaching for two separate goals with angle limits on certain joints, controlled by CCD IK.</p>
                                     </div>
                                 </div>
                             
@@ -122,7 +125,7 @@
                                     </video>    
                                     <div class="carousel-caption d-none d-md-block">
                                     <h5>BOIDs with Local Obstacle Avoidance</h5>
-                                    <p>3D agents moving around a obstacle laden map acording to the BOIDs flocking algorithm and an addition obstacle avoidance force.</p>
+                                    <p>3D agents moving around an obstacle-laden map according to the BOIDs flocking algorithm and an additional obstacle avoidance force.</p>
                                     </div>
                                 </div>
                         
@@ -148,7 +151,7 @@
                         <ul class="ps-3 list-unstyled">
                             <li>
                                 <strong>Category:</strong>
-                                Game Development, Inverse Kinematics, Group Movment, Local Object Avoidance,Graphics, 3D Simulation, Unity
+                                Game Development, Inverse Kinematics, Group movement, Local Object Avoidance, Graphics, 3D Simulation, Unity
                             </li>
                             <li>
                                 <strong>Date:</strong> Fall 2023
@@ -208,7 +211,9 @@
                             <div class="card-body">
                                 <h5 class="card-title snippet">Multi Limb IK 2D Armature</h5>
                                 <p class="ps-2 card-text">
-                                    This simulation uses the Cyclic Coordinate Descent method to implement Inverse Kinematics along a multi-limb armature. The armature consists of a series of connected bones that end in two separate limbs with end effectors that are reaching toward two different goal points in the scene.
+                                    This simulation uses the Cyclic Coordinate Descent method to implement Inverse Kinematics along 
+                                    a multi-limb armature. The armature consists of a series of connected bones that end in two separate 
+                                    limbs with end effectors that are reaching towards two different goal points in the scene.
                                 </p>
                             </div>
                         </div>
@@ -226,7 +231,9 @@
                             <div class="card-body">
                                 <h5 class="card-title snippet">Angle Limits and Collision</h5>
                                 <p class="ps-2 card-text">
-                                    In addition to the CCD IK driving the armature, the simulation also includes angle constraints that can be defined for each joint. Collisions between the armature and obstacles were also implemented using a simple line and circle intersection test.
+                                    In addition to the CCD IK driving the armature, the simulation also includes angle constraints 
+                                    that can be defined for each joint. Collisions between the armature and obstacles were also implemented 
+                                    using a simple line and circle intersection test.
                                 </p>
                             </div>
                         </div>
@@ -244,7 +251,8 @@
                             <div class="card-body">
                                 <h5 class="card-title snippet">BOIDS Flocking Simulation</h5>
                                 <p class="ps-2 card-text">
-                                    The second simulation uses the BOIDs flocking algorithm to drive the movement of agents in a 3D environment. BOIDS uses a series of forces between nearby units to simulate intelligent group movement.
+                                    The second simulation uses the BOIDs flocking algorithm to drive the movement of agents 
+                                    in a 3D environment. BOIDS uses a series of forces between nearby units to simulate intelligent group movement.
                                 </p>
                             </div>
                         </div>
@@ -263,7 +271,10 @@
                             <div class="card-body">
                                 <h5 class="card-title snippet">Collision Avoidance and Goal Force</h5>
                                 <p class="ps-2 card-text">
-                                    In addition to the normal forces included in BOIDs, I also implemented two additional forces. A goal force, directing the agents towards a goal position on the map, and a collision avoidance force. That force pushes agents away from objects in the scene they are moving towards in order to steer the agents around obstructions.
+                                    In addition to the normal forces included in BOIDs, I also implemented two additional 
+                                    forces. A goal force, directing the agents towards a goal position on the map, and a collision 
+                                    avoidance force. That force pushes agents away from objects in the scene they are moving towards 
+                                    in order to steer the agents around obstructions.
                                 </p>
                             </div>
                         </div>
