Optomizing assets and adding lazy loading

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -80,7 +80,7 @@
 
                 <div class="row mt-5">
                     <div class="col-lg-4 col-xl-6 my-auto">
-                        <img src="../Img/IMG_E1043.JPG"
+                        <img src="../Img/AboutImageSmall.jpg"
                         class="cIMG py-2 w-100" />
                     </div>
                     <div class="col-lg-8 col-xl-6 my-auto">
